# CARnary_client

./: .dockerignore  CARnary_libConfig.cmake  CMakeLists.txt  Dockerfile  README.md
include/: library.h
include/carnary/: CARnaryClient.h  Utils.h
src/: CARnaryClient.cpp  Utils.cpp
